syntax = "proto3";
package todoPackage;

service Todo{
    rpc createTodo(TodoItem) returns (TodoItem);
    rpc readTodos(noparams) returns (TodoItems);
    rpc add(AddRequest) returns (AddReply);
    rpc multiply(multiplyRequest) returns (multiplyReply);
    rpc sub(subRequest) returns (subReply);

    rpc createUser(user) returns (user);
    rpc useers(noparams) returns (users);
}

message noparams {}
message TodoItem {
    int32 id=1;
    string text=2;
}
message TodoItems{
    repeated TodoItem items=1;
}

message user {
    int32 id=1;
    string name=2;
    string password=3;
}
message users{
    repeated user users=1;
}

message AddRequest{
	
	int32 n1=1;
	int32 n2=2;
}

message AddReply{
	
	int32 n1=1;
}


message multiplyRequest{
	
	int32 n1=1;
	int32 n2=2;
}

message multiplyReply{
	
	int32 n1=1;
}

message subRequest{
	
	int32 n1=1;
	int32 n2=2;
}

message subReply{
	
	int32 n1=1;
}